# collect-with

./: Cargo.toml
.cargo/: config.toml
docs/: Readme.md
src/: collect.rs  collect_ahash.rs  collect_index.rs  collect_vec.rs  common.rs  extend.rs  lib.rs  try_collect.rs  try_extract.rs
tests/: doc.rs  fmt.rs
