[package]
name = "collect-with"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
readme = "docs/Readme.md"
exclude = ["/rust-toolchain.toml"]
rust-version = "1.85"
repository = "https://github.com/2moe/collect-with"
keywords = ["iterator"]
categories = ["rust-patterns", "no-std"]
description = """
A utility crate for enhanced collection operations with capacity control.
"""

[features]
default = ["try", "collect_vec"]
# default = ["all"]
# -----
std = []
# -----
try = []
collect_vec = []
ahash = ["dep:ahash", "std"]
indexmap = ["dep:indexmap", "std"]
# -----
all = [
    "std",         #
    "try",
    "collect_vec",
    "ahash",
    "indexmap",
]

[package.metadata.docs.rs]
all-features = true
# targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__unstable_doc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__unstable_doc)'] }

[dev-dependencies.testutils]
# path = "../testutils"
version = "0.0.1"

[dependencies]
ahash = { version = "0.8.11", optional = true }
indexmap = { version = "2.7.1", optional = true }
